@@ -4,7 +4,7 @@
 #########################
 
 use Test;
-BEGIN { plan tests => 15 }; # <--- number of tests
+BEGIN { plan tests => 17 }; # <--- number of tests
 
 use ExtUtils::testlib;
 use Crypt::GCrypt;
@@ -86,7 +86,20 @@ ok($e eq pack('H*', '02a98d20a176729ea7cd'))
   or print STDERR "[",unpack('H*',$e),"]\n";
 $c->setkey($key);
 $c->start('decrypting');
-$d = $c->decrypt($e);print "before finish\n";
+$d = $c->decrypt($e);
 $d .= $c->finish;
 ok(substr($d, 0, length $p) eq $p)
  or print STDERR "[$d|",unpack('H*',$d),"]\n";
+
+### 'none' padding
+{
+    $c = Crypt::GCrypt->new(
+    	type => 'cipher', 
+    	algorithm => 'aes',
+    	padding => 'none'
+    );
+    $c->start('encrypting');
+    ok(!eval {my $e2 = $c->encrypt('aaa'); 1});  # this should die
+    ok(eval { my $e2 = $c->encrypt('aaaaaaaaaaaaaaaa') . $c->finish; 1 });  # this should not die
+}
+
